--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
 		position: -webkit-sticky; /* Safari */
 		top: 0;
 		z-index: 12;
-		background-color: #8FAADC;
+		background-color: #F3B56C;
 		padding: 15px 0 5px 0 ;
 		border-bottom: 3px solid #e1e1e1;
 	
